--- a/resources/scss/partials/_main.scss
+++ b/resources/scss/partials/_main.scss
@@ -25,7 +25,9 @@
   }
   
   .gallery .btn {
-    align-self: center;
+    display: flex;
+    justify-content: center;
+    max-width: 10%;
   }
   
   .banner {
